Apply patch (requested by drochner in ticket #1454): Fix inconsistencies in the wapbl replay process which can lead to a premature abort of the fsck run and possibly leave a corrupted filesystem.  Addresses PR bin/43336.